# succinct-tries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bp.hpp  bp_test.cpp  bracket_table.cpp  centroid_path_tree.hpp  dfuds.hpp  example.cpp  findclose.hpp  louds.hpp
src/include/strie/: centroid_path_tree.hpp
